--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,30 @@
-simplejson
-lxml
-codecov
-coverage
-flask
-pre - commit
-pytest
-PyJWT
-requests
+blinker==1.7.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+codecov==2.1.13
+coverage==7.3.4
+dnspython==2.4.2
+Flask==2.0.0
+greenlet==3.0.3
+idna==3.6
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.4
+MarkupSafe==2.1.3
+packaging==23.2
+pluggy==1.3.0
+pre==1.3.0
+psycopg2==2.9.9
+PyJWT==2.8.0
+pymongo==4.6.0
+pytest==7.4.3
+requests==2.31.0
+simplejson==3.19.2
+SQLAlchemy==2.0.23
+sqlalchemy-searchable==2.0.0
+SQLAlchemy-Utils==0.41.1
+typing_extensions==4.9.0
+urllib3==2.1.0
+Werkzeug==2.0.0
